<resources>
    <string name="app_name">Weather Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="temp">Температура: </string>
    <string name="sky">Небо: </string>
    <string name="clouds">Облачность: </string>
    <string name="humidity">Влажность: </string>
    <string name="wind">Скорость ветра: </string>
    <string name="time">Время: </string>
    <string name="editTextHint">Введите текст</string>
    <string name="no_connection">Отсутствует интернет соединение</string>
    <string name="no_information">Информация не найдена</string>
</resources>
