<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#dae4e4e4"
        android:orientation="vertical"
        android:padding="17dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ExItemTV"
                android:text="@string/time" />

            <TextView
                android:id="@+id/date"
                style="@style/ExItemTV"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ExItemTV"
                android:text="@string/temp" />

            <TextView
                android:id="@+id/temp"
                style="@style/ExItemTV"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ExItemTV"
                android:text="@string/sky" />

            <TextView
                android:id="@+id/weather"
                style="@style/ExItemTV" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ExItemTV"
                android:text="@string/clouds"  />

            <TextView
                android:id="@+id/clouds"
                style="@style/ExItemTV" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ExItemTV"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/humidity"
                style="@style/ExItemTV" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ExItemTV"
                android:text="@string/wind" />

            <TextView
                android:id="@+id/wind"
                style="@style/ExItemTV" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
